Updated ORTC APIs  specification
As per  2013-11-03 specification updates.

--- a/p2p_av_demo/lib/gatewayclient-ortc.html
+++ b/p2p_av_demo/lib/gatewayclient-ortc.html
@@ -25,7 +25,10 @@
     <script src="/ortc.js"></script>
     <script src="/dictionaries.js"></script>
     <script src="/RTCSocket.js"></script>
+    <script src="/RTCDataChannel.js"></script>
+    <script src="/RTCStream.js"></script>
     <script src="/RTCTrack.js"></script>
+    <script src="/RTCDTMFTrack.js"></script>
     <script src="/RTCConnection.js"></script>
     <script src="/getUserMedia.js"></script>
     <script src="/MediaStream.js"></script>
